# Lumos

./: README.md  requirements.txt  setup.cfg
.ipynb_checkpoints/: LICENSE-checkpoint  README-checkpoint.md  requirements-checkpoint.txt
Notebooks/: Emidec_Converter.ipynb  case_slice_to_sops.json
Notebooks/.ipynb_checkpoints/: AI_Comparison-checkpoint.ipynb  CNN_Cases-Copy1-checkpoint.ipynb  EdyJansBullseyeTest-checkpoint.ipynb  Emidec_Converter-checkpoint.ipynb  Export_AnnoChoices_SAXCINE-checkpoint.ipynb  Export_AnnoChoices_SAXCINE_2-checkpoint.ipynb  Export_Imgtype2Anno-checkpoint.ipynb  Export_Imgtype2Anno_twotasks-checkpoint.ipynb  FindCSImages-checkpoint.ipynb  Insert_Evaluations-checkpoint.ipynb  Make_LGE_scars-checkpoint.ipynb  MnM_Cases_Insertion_Script-checkpoint.ipynb  RoR_miniversion-checkpoint.ipynb  Trainee_Cases_Insertion_Script-checkpoint.ipynb  Trainee_Comparisons-checkpoint.ipynb  dicom_to_dict-checkpoint.ipynb  testing_organizers-checkpoint.ipynb
docs/EmidecData/: Emidec_Converter.ipynb
src/Lumos/: Annotation.py  Case.py  ClinicalResults.py  Evaluation.py  ImageOrganizer.py  Metrics.py  Quad.py
src/Lumos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/Lumos/.ipynb_checkpoints/: Annotation-checkpoint.py  Evaluation-checkpoint.py  ImageOrganizer-checkpoint.py  Quad-checkpoint.py  loading_functions-checkpoint.py
src/Lumos/Figures/: Angle_Segment_Comparison.py  Annotation_Comparison.py  Basic_Presenter.py  BlandAltman.py  Boxplot.py  DCMs_list_Annos_Presenter.py  Failed_Annotation_Comparison_Yielder.py  Image_List_Presenter.py  LAX2CV_BlandAltman.py  (+26 more)
src/RoomOfRequirement/: Annotation.py  Case.py  Evaluation.py  Metrics.py  Quad.py
src/RoomOfRequirement.egg-info/: SOURCES.txt  requires.txt  top_level.txt
(+1199 files in other folders)
