[metadata]
name = RoomOfRequirement
version = 0.0.1
author = Thomas Hadler
author_email = thomas.hadler@charite.de
description = bla
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thadler/roomofrequirement
project_urls =
    Bug Tracker = https://github.com/thadler/roomofrequirement/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0-only
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    PyQt6
    pyqtdarktheme
    shapely>=2.0
    numpy
    scikit-image
    matplotlib>=3.6
    seaborn
    pydicom
    rasterio
    pandas
    fpdf
    pymongo
    mpl_interactions

[options.packages.find]
where = src