[metadata]
name = Lumos
version = 0.0.1
author = Philine Reisdorf
author_email = philine-rabea.reisdorf@charite.de
description = see readme
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thequadsquad/lumos
project_urls =
    Bug Tracker = https://github.com/thequadsquad/lumos/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0-only
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    PyQt6==6.6.1
    shapely==2.0.2
    numpy==1.26.3
    scikit-image==0.22.0
    matplotlib==3.8.2
    seaborn==0.13.2
    pydicom==2.4.4
    rasterio==1.3.9
    pandas==2.2.0
    fpdf==1.7.2
    pymongo==4.6.1
    mpl_interactions==0.24.1

[options.packages.find]
where = src